# EmbeddedML

./: CMakeLists.txt  LICENSE.md  README.md
examples/: cifar10.cc  cifar10.hh  cifarRL.cc  cifarRL.hh  mnist.cc  mnist.hh  mnistRL.cc  mnistRL.hh  regression-test.cc  regression.cc  regression.hh  regression_main.cc  transformer-test.cc  transformer-test.py  transformer.cc  transformer.hh  transformer.py
examples/cifar10/: download_cifar10.sh
examples/cifar10/include/cifar/: cifar10_reader.hpp
examples/mnist/: download_mnist.sh
graph/: graph.hh  random.hh
main/: fpimage.cc  fpimage.hh  graph.cc  graph.hh  graph.pb.h  graph.proto  image.cc  image.hh  imageFP.cc  imageFP.hh  main.cc  optimizer.hh  painter.hh  random.hh  rlenv.cc  rlenv.hh  storage.cc  storage.hh  transport.hh  types.hh  unittest.cc  unittest.hh
stream/: README  graph.proto  master.cc  worker.cc
utils/: graph.pb.cc  graph.pb.h  graph.proto  image.cc  image.hh  imageFP.cc  imageFP.hh  main.cc  master.cc  painter.hh  rlenv.cc  rlenv.hh  storage.cc  storage.hh  training.hh  transport.hh  unittest.cc  unittest.hh  worker.cc
